completed prtototype journey

--- a/lib/prototype-admin/clear-data-success.html
+++ b/lib/prototype-admin/clear-data-success.html
@@ -7,14 +7,14 @@
 {% block content %}
 
   <h1 class="govuk-heading-m">
-    Data cleared
+    Data cleared - The session data has been cleared.
   </h1>
 
-  <p>
-    The session data has been cleared.
+  <p class="govuk-body-l govuk-!-padding-bottom-9 govuk-!-padding-top-9">
+    Case/Product prototype user testing: <a href="/product-case-testing/start" class="govuk-link govuk-link--no-visited-state">Start next task</a>
   </p>
 
-  <p>
+  <p class="govuk-body-s">
     <a href="/">
       Prototype home page
     </a>
